fixes to dn list gaps

--- a/src/DnShortcutComponent/styles.module.css
+++ b/src/DnShortcutComponent/styles.module.css
@@ -1,5 +1,4 @@
 .dnShortcut {
-  margin-bottom: 10px;
   padding: 10px;
   border: 1px solid #666;
   cursor: pointer;
